--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 				<a href="#" class="logo"><img src="img/logo-1.svg" alt="MySite"></a>
 
-				<div class="phone hidden-xs"><i class="fa fa-mobile"></i> +3 8(063) 241-69-89</div>
+				<div class="phone hidden-xs"><i class="fa fa-mobile"></i> +3 8(097) 096-60-37</div>
 
 				<a href="#my-menu" class="hamburger hamburger--emphatic">
 					<span class="hamburger-box"><span class="hamburger-inner"></span></span>
@@ -77,11 +77,11 @@
 
 									<div class="welcome">
 										<p><span>Добро пожаловать на сайт</span></p>
-										<h1 class="h1">Hip-hop music</h1>
-										<strong><i class="fa fa-star"></i>в Днепре<i class="fa fa-star"></i></strong>
+										<h1 class="h1">KRONIKA</h1>
+										<strong><i class="fa fa-star"></i>в Каменском<i class="fa fa-star"></i></strong>
 									</div>
 
-									<p><strong>Hip-hop REC</strong> - это сайт хип-хоп индустрии. Мастера по убиванию битов дарят уверенность в себе и индивидуальный подход. Здесь предоставлены все самые лучшие исполнители рэп-индустрии.</p>
+									<p><strong>KRONIKA</strong> - это сайт музыкальной студии. У нас вы можете заказть как звукозапись так и видеозапись. </p>
 
 									<a href="#" class="button">О сайте</a>
 
@@ -108,13 +108,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 col-sm-6">
-							<i class="fa fa-location-arrow"></i>г. Днепр, ул. Дзержинского 6
+							<i class="fa fa-location-arrow"></i>г. Каменское, ул. Грушевского 22
 						</div>
 						<div class="col-md-4 col-sm-6">
-							<div class="phone-h"><i class="fa fa-mobile"></i>+3 8(063) 241-69-89</div>
+							<div class="phone-h"><i class="fa fa-mobile"></i>+3 8(097) 096-60-37</div>
 						</div>
 						<div class="col-md-4 hidden-sm hidden-xs">
-							<i class="fa fa-clock-o"></i>Время работы: ежедневно 10:00 - 20:00
+							<i class="fa fa-clock-o"></i>Время работы: пн-пт 9:00 - 18:00
 						</div>
 					</div>
 				</div>
@@ -134,11 +134,28 @@
 					<div class="carousel-services-content">
 						<div class="carousel-services-composition">
 							<div class="carousel-logo"><img src="img/logo-2.svg" alt="rec"></div>
-							<h3 class="h3">Концертный тур</h3>
+							<h3 class="h3">Сведение</h3>
 							<ul class="carousel-services-list">
-								<li>Цена билета балкон - <strong>5000 <i class="fa fa-eur"></i></strong></li>
-								<li>Цена билета зал - <strong>7000 <i class="fa fa-eur"></i></strong></li>
-								<li>Цена билета VIP - <strong>8500 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена одного - <strong>10 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена двух - <strong>18 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена трех и больше - <strong>по 15 <i class="fa fa-eur"></i></strong></li>
+							</ul>
+							<a href="#" class="button button-white">Список услуг</a>
+						</div>
+					</div>
+					<div class="carousel-services-image" style="background-image: url(img/service.jpg);">
+					</div>
+				</div>
+				
+				<div class="carousel-services-item">
+					<div class="carousel-services-content">
+						<div class="carousel-services-composition">
+							<div class="carousel-logo"><img src="img/logo-2.svg" alt="rec"></div>
+							<h3 class="h3">Мастеринг</h3>
+							<ul class="carousel-services-list">
+								<li>Цена одного - <strong>10 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена двух - <strong>18 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена трех и больше - <strong>по 15 <i class="fa fa-eur"></i></strong></li>
 							</ul>
 							<a href="#" class="button button-white">Список услуг</a>
 						</div>
@@ -153,9 +170,9 @@
 							<div class="carousel-logo"><img src="img/logo-2.svg" alt="rec"></div>
 							<h3 class="h3">Студия звукозаписи</h3>
 							<ul class="carousel-services-list">
-								<li>Цена полного трека - <strong>1000 <i class="fa fa-eur"></i></strong></li>
-								<li>Цена записи - <strong>400 <i class="fa fa-eur"></i></strong></li>
-								<li>Цена сведения - <strong>600 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена одного - <strong>30 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена двух - <strong>27 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена трех и больше - <strong>по 25 <i class="fa fa-eur"></i></strong></li>
 							</ul>
 							<a href="#" class="button button-white">Список услуг</a>
 						</div>
@@ -170,9 +187,9 @@
 							<div class="carousel-logo"><img src="img/logo-2.svg" alt="rec"></div>
 							<h3 class="h3">Студия видеозаписи</h3>
 							<ul class="carousel-services-list">
-								<li>Цена клипа - <strong>6000 <i class="fa fa-eur"></i></strong></li>
-								<li>Цена съемки - <strong>2000 <i class="fa fa-eur"></i></strong></li>
-								<li>Цена мотажа - <strong>4000 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена клипа - <strong>200 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена съемки - <strong>100 <i class="fa fa-eur"></i></strong></li>
+								<li>Цена мотажа - <strong>100 <i class="fa fa-eur"></i></strong></li>
 							</ul>
 							<a href="#" class="button button-white">Список услуг</a>
 						</div>
@@ -252,7 +269,7 @@
 
 					<div class="col-md-5 col-md-offset-7 col-sm-6 col-sm-offset-6">
 
-						<form class="callback">
+						<form action="mail.php" method="POST" class="callback">
 
 							<div class="success"><span>Спасибо за заявку!</span></div>
 
@@ -268,8 +285,8 @@
 							<div class="formhead h2">Оставить заявку</div>
 							<p>Оставьте заявку и мы вам перезвоним в течении 15 минут.</p>
 
-							<input type="text" name="Имя" placeholder="Ваше имя..." required>
-							<input type="text" name="Телефон" placeholder="Ваш телефон..." required>
+							<input type="text" name="name_user" placeholder="Ваше имя..." required>
+							<input type="text" name="phone_user" placeholder="Ваш телефон..." required>
 							<select name="Услуга">
 								<option value disabled selected>Выбрать услугу...</option>
 								<option>Концертный тур</option>
@@ -277,7 +294,7 @@
 								<option>Студия видеозаписи</option>
 								<option>Скидки для:</option>
 							</select>
-							<button class="button button-white">Отправить</button>
+							<button type="submit" class="button button-white">Отправить</button>
 
 						</form>
 
