--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>MySite</title>
+	<title>Kronika</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,16 +51,16 @@
 
 				<nav id="my-menu">
 					<ul>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number one</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number two</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number three</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number four</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number five</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number six</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number seven</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number eigth</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number nine</a></li>
-						<li><a href="#"><i class="fa fa-star-half"></i>menu number ten</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Главная</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Заказы</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Аудио</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Видео</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Студия</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Минуса</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Битмейкеры</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Звукорежиссеры</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>Контакты</a></li>
+						<li><a href="#"><i class="fa fa-star-half"></i>О нас</a></li>
 					</ul>
 				</nav>
 
