--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 					<div class="col-lg-2 col-sm-4 col-xs-12"><div class="footer-column">
 						
 						<img src="img/logo-1.svg" alt="rec" class="logo-footer">
-						<p>Студия rec <br> в Днепре</p>
+						<p>Студия rec <br> в Каменском</p>
 						<div class="social-footer">
 							<nav class="soc">
 								<ul>
@@ -438,8 +438,8 @@
 					</div></div>
 					<div class="col-lg-3 col-sm-4 col-xs-12"><div class="footer-column">
 						
-						<p class="footer-addr"><i class="fa fa-location-arrow"></i> г. Днепр, ул. Дзержинского, 6</p>
-						<p class="footer-addr"><i class="fa fa-clock-o"></i> Время работы: Ежедневно, <br>10:00 - 22:00</p>
+						<p class="footer-addr"><i class="fa fa-location-arrow"></i> г. Каменское, ул. Грушевского, 22</p>
+						<p class="footer-addr"><i class="fa fa-clock-o"></i> Время работы: Ежедневно, <br>пн-пт 9:00 - 18:00</p>
 						<p class="footer-addr"><span class="footer-phone"><i class="fa fa-mobile"></i> +3 8(050) 186 44 03</span></p>
 
 
